# last

./: .env.example  .gitignore  Dockerfile  Dconnectsimple_test.py  PROJECT_RESTRUCTURE_REPORT.md  README_RESTRUCTURED.md  agentlightning_demo_results.json  agentlightning_example_agent.py  agentlightning_integration_report.md  agentlightning_integration_summary.md  agentlightning_project_analysis.json  docker-compose.yml  html_comprehensive_analysis_report.md  html_page_analyzer.py  openapi.yaml  project_analyzer.py  pyproject.toml  requirements.txt  simple_agentlightning_demo.py  simple_project_analyzer.py  test_agents_dialogue.py  test_llm_api.py  test_readable_dialogue.py  test_workflow_dialogue.py
.claude/: settings.local.json
config/: siliconflow.yml
docs/: architecture-overview.md  deployment-guide.md  integration-guide.md  mvp2-integration-guide.md  operations-manual.md  postgresql-to-sqlite-migration.md  troubleshooting-guide.md
examples/: README.md  basic_workflow.py  (+4 more)
langgraph-base/aaaa/: DEPLOYMENT.md  README.md  pyproject.toml  simple_test.py  verify_system.py  verify_system_clean.py
langgraph-base/aaaa/.claude/: settings.local.json
langgraph-base/aaaa/config/: default.yaml  development.yaml  production.yaml
langgraph-base/aaaa/openspec/: project.md
langgraph-base/aaaa/openspec/changes/implement-langgraph-agent-system/: design.md  proposal.md  tasks.md
langgraph-base/aaaa/openspec/changes/implement-langgraph-agent-system/specs/communication/: spec.md
langgraph-base/aaaa/openspec/changes/implement-langgraph-agent-system/specs/meta-agent/: spec.md
langgraph-base/aaaa/openspec/changes/implement-langgraph-agent-system/specs/task-management/: spec.md
langgraph-base/aaaa/scripts/: start_system.py
langgraph-base/aaaa/src/: __init__.py
langgraph-base/aaaa/src/agents/: meta_agent.py  nodes.py
langgraph-base/aaaa/src/api/: health.py
langgraph-base/aaaa/src/communication/: message_bus.py  messaging.py  protocol.py  registry.py
langgraph-base/aaaa/src/core/: base_agent.py  checkpoint.py  config.py  coordinator.py  exceptions.py  interface.py  monitoring.py  state.py  types.py
langgraph-base/aaaa/src/task_management/: lifecycle.py  planning.py  resource_manager.py  task_manager.py
langgraph-base/aaaa/src/utils/: logging.py
langgraph-base/aaaa/tests/: test_basic_functionality.py  test_core_types.py  test_e2e_workflow.py  test_integration.py  test_message_bus.py
(+245 files in other folders)
