[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-multi-agent"
version = "1.0.0"
description = "基于LangGraph的多智能体任务管理系统"
authors = [
    {name = "LangGraph Multi-Agent Team"}
]
dependencies = [
    "langgraph>=1.0.1",
    "langchain-core>=1.0.0",
    "langsmith>=0.4.38",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["langgraph_multi_agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88